--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,10 +11,22 @@ configure_file(BuildConfig.h.in BuildConfig.h)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-add_executable(GPGPU-Test main.cpp)
+add_library(Kozy_GPGPU STATIC
+    API_Handler_OpenGL.cpp
+    API_Handler.cpp
+)
 
+#add_subdirectory(Kozy_GPGPU)
+
+add_executable(GPGPU-Test 
+#main.cpp
+Test/compileTest.cpp
+
+)
+target_link_libraries(GPGPU-Test Kozy_GPGPU)
 
 add_compile_definitions(M_IS_DEBUG=${MM_IS_DEBUG})
+#add_compile_definitions(M_IS_DEBUG=${true})
 
 
 target_include_directories(GPGPU-Test PUBLIC
