--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,23 +1,36 @@
 cmake_minimum_required(VERSION 3.21)
 
-project(GPGPU-Test VERSION 1.0.0 LANGUAGES CXX)
+project(miniTest VERSION 1.0.0 LANGUAGES CXX)
 
 # Debug Version may contain runtime checks and experimental features/implementations
-set(MM_IS_DEBUG true)
+ set(MM_IS_DEBUG true)
 
 configure_file(BuildConfig.h.in BuildConfig.h)
-
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-add_executable(GPGPU-Test main.cpp)
+add_subdirectory(GPU_API_HANDLING)
 
+
+
+
+add_executable(miniTest 
+    testMain.cpp
+)
+
+target_link_libraries(miniTest 
+    GPU_API_HANDLING
+)
 
 add_compile_definitions(M_IS_DEBUG=${MM_IS_DEBUG})
 
 
-target_include_directories(GPGPU-Test PUBLIC
-                           "${PROJECT_BINARY_DIR}"
-                           )
+
+target_include_directories(miniTest PUBLIC
+    "${PROJECT_BINARY_DIR}"
+    "${PROJECT_SOURCE_DIR}/../Kozy_CPP_Library"
+    "${PROJECT_SOURCE_DIR}/GPU_API_HANDLING"
+
+)
 
