--- a/Events/CMakeLists.txt
+++ b/Events/CMakeLists.txt
@@ -1,13 +1,13 @@
 
 add_library(EVENTS_MODULE STATIC
-    "OpenGL_Functions.cpp"
+    "OpenGL_Wrapper.cpp"
     "Events_Manager.cpp"
 )
 
 
 
 target_include_directories(EVENTS_MODULE PRIVATE
-    "${PROJECT_SOURCE_DIR}/external"
+    "${PROJECT_SOURCE_DIR}/external" # temp
 
     "${PROJECT_BINARY_DIR}"
 
